<resources>
    <string name="app_name">赚啦理财</string>
    <string name="account">账号</string>
    <string name="realname_master">实名认证</string>
    <string name="credit_card_master">银行卡管理</string>
    <string name="login_password">登录密码</string>
    <string name="change_login_password">修改登录密码</string>
    <string name="transaction_password">交易密码</string>
    <string name="gesture_password">手势密码</string>
    <string name="gesture_password2">旧手势密码</string>
    <string name="gesture_unlock">手势解锁</string>
    <string name="password_error">密码错误</string>
    <string name="change_gesture_password">修改手势密码</string>
    <string name="mobile">手机号码</string>
    <string name="bind_bank">绑定银行</string>
    <string name="identify_code">验证码</string>
    <string name="input_mobile">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_bank_mobile">请输入预留手机号码</string>
    <string name="input_repeat_password">请再次输入密码</string>
    <string name="input_transaction_repeat_password">请再次输入交易密码</string>
    <string name="input_financial_money">输入理财金额</string>
    <string name="input_financial_time">输入理财期限</string>
    <string name="forget_password">忘记密码</string>
    <string name="change_account">更换账号</string>
    <string name="retrieve_password">找回密码</string>
    <string name="bind_cardinfo">绑定银行卡</string>
    <string name="confirm_cardinfo">验证银行卡信息</string>
    <string name="change_password">修改登录密码</string>
    <string name="change_transaction_password">修改交易密码</string>
    <string name="setting_password">设置登录密码</string>
    <string name="setting_transaction_password">设置交易密码</string>
    <string name="realname_confirm">实名认证</string>
    <string name="input_register_app">欢迎来到赚啦！</string>
    <string name="input_contact_way">请输入您的手机号码或qq</string>
    <string name="input_realname">请输入真实姓名</string>
    <string name="input_icnumber">请输入身份证号码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_identifying_code">请输入验证码</string>
    <string name="input_setting_password">6&#8211;16个字符，区分大小写</string>
    <string name="input_bind_bank">请确保以下信息与银行卡登记时一致</string>
    <string name="input_realname_info">请确保以下信息与身份证信息一致</string>
    <string name="input_setting_transaction_password">请设置交易密码，6&#8211;16个字符，区分大小写</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="confirm">确认修改</string>
    <string name="submit">提&#160;&#160;交</string>
    <string name="sended_identify_code">已将验证码发送至：%1$d</string>
    <string name="login">登录</string>
    <string name="inputnumber">登录/注册</string>
    <string name="register">注册</string>
    <string name="setting">设置</string>
    <string name="encourage_u">鼓励一下</string>
    <string name="feedback">意见反馈</string>
    <string name="help_center">帮助中心</string>
    <string name="check_update">检查更新</string>
    <string name="about_bk">关于我们</string>
    <string name="bank_master">银行卡管理</string>
    <string name="contact_way">联系方式</string>
    <string name="feedback_hint">感谢您的支持，请说几句吧&#8230;</string>
    <string name="feedback_left">可输入%1$s字</string>
    <string name="feedback_time">(09:00&#8211;21:00)</string>
    <string name="agree_read">已阅读并同意</string>
    <string name="bk_agreement">《用户注册协议》</string>
    <string name="bk_agreement2">《债权转让咨询与服务协议》</string>
    <string name="pay_agreement_text">《用户支付服务协议》</string>
    <string name="pay_agreement_text2">《投资授权委托协议》</string>
    <string name="pay_agreement_text3">《债券转让咨询与服务协议》</string>
     <string name="pay_agreement_text5">《赚啦投资咨询管理服务协议》</string>
      <string name="pay_agreement_text11">《支付协议》</string>
      <string name="pay_agreement_text12">《借款合同》</string>
       <string name="pay_agreement_text13">《委托咨询服务协议》</string>
      <string name="pay_agreement_text14">《债权转让协议》</string>
          <string name="pay_agreement_text15">《用户授权协议》</string>
    <string name="identify_code_reload">秒后重新获取</string>
    <string name="identify_code_reloading">重新获取验证码</string>
    <string name="password">密码</string>
    <string name="remittance">汇款金额(元)</string>
    <string name="repeat_password">重复密码</string>
    <string name="realname">姓名</string>
    <string name="icnumber">身份证</string>
    <string name="cardnumber">卡号</string>
    <string name="identify_code_sended">已将验证码发送至：</string>
    <string name="agreement11">支付协议</string>
    <string name="agreement12">借款合同</string>
    <string name="agreement13">委托咨询服务协议</string>
     <string name="agreement14">用户注册协议</string>
     <string name="agreement15">债权转让协议</string>
      <string name="agreement16">用户授权协议</string>
         <string name="agreement17">风险告知书</string>
    <string name="agreement">用户使用协议</string>
    <string name="agreement2">债权转让咨询与服务协议</string>
    <string name="pay_agreement">用户支付服务协议</string>
    <string name="pay_agreement2">投资授权委托协议</string>
    <string name="pay_agreement3">债权转让咨询与服务协议</string>
     <string name="pay_agreement5">赚啦投资咨询管理服务协议</string>
    <string name="yesterday_income_rmb">昨日收益(元)</string>
    <string name="total_income_rmb">累计收益(元)</string>
    <string name="total_capital_rmb">总资产(元)</string>
    <string name="total_capital">总资产</string>
    <string name="transaction_records">交易记录</string>
    <string name="project_list">分散债权</string>
    <string name="logout">退出登录</string>
    <string name="back_home">返回首页</string>
    <string name="transaction_detail">交易详情</string>
    <string name="purchase_detail">购买详情</string>
    <string name="cost">购买金额</string>
    <string name="pay_account">支付账户</string>
    <string name="transaction_order_id">交易订单号</string>
    <string name="transaction_order_time">交易时间</string>
    <string name="expected_annual">预期年化</string>
    <string name="should_income">预期总收益</string>
    <string name="income">收益(元)</string>
    <string name="annual_income2">今日年化收益率(%)</string>
    <string name="product_detail">产品详情</string>
    <string name="purchase">购买</string>
    <string name="redeem">取现</string>
    <string name="info_confirm">提交成功</string>
    <string name="purchase_btn">购&#160;&#160;买</string>
    <string name="purchase_btn_bold"><b>购&#160;&#160;&#160;&#160;买</b></string>
    <string name="wait_btn_bold"><b>即将开始</b></string>
    <string name="redeem_btn">赎&#160;&#160;回</string>
    <string name="credit_card">到账银行卡</string>
    <string name="accounting_date">预计到账时间</string>
    <string name="pay_bank">支付银行</string>
    <string name="income_date">预计收益时间</string>
    <string name="income_date2">预计到账时间</string>
    <string name="redeem_money">取现金额</string>
    <string name="all">全部</string>
    <string name="input_money">请输入</string>
    <string name="input_transaction_password">请输入</string>
    <string name="input_remittance">请输入汇款金额</string>
    <string name="confirm_redeem">确认赎回</string>
    <string name="poundage">手续费</string>
    <string name="redeem_confirm">取现</string>
    <string name="redeem_confirm2">取现确认</string>
    <string name="income_detail">收益详情</string>
    <string name="warmly_remind">温馨提醒</string>
    <string name="think_kind">计算公式：</string>
    <string name="send_redeem_ok">提交成功</string>
    <string name="waiting">等待收益</string>
    <string name="receive_redeem">预计到账时间</string>
    <string name="ok">确&#160;&#160;&#160;&#160;定</string>
    <string name="ok2">确&#160;&#160;定</string>
    <string name="risk">风险程度</string>
    <string name="financial_period">理财期限</string>
    <string name="purchase_startline">起购金额</string>
    <string name="work_time">起息时间</string>
    <string name="cash_account">取现到账</string>
    <string name="multi_income">万份收益</string>
    <string name="supported_bank">支持银行</string>
    <string name="percent"><b>%</b></string>
    <string name="risk_control">风险控制</string>
    <string name="money_safe">资金安全</string>
    <string name="about_bk_text">        					&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;“赚啦理财”是浙江贝壳财富投资有限公司旗下的一款理财APP产品，
        专为有理财需求的投资人打造的“懒人理财神器”，目的是简化投资人的理财投标流程，提高投资人的资金使用效率，让投资者从复杂的投标流程中解放出来，收获轻松理财的快乐。</string>
    <string name="beikbank"><b>光伏理财</b></string>
    <string name="rmb">元</string>
    <string name="day">天</string>
    <string name="thinking">计&#160;&#160;&#160;&#160;算</string>
    <string name="realname_remind">购买理财产品需提供实名信息以确保投资安全</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="input_cost">请输入购买金额</string>
    <string name="purchase_confirm">确认购买</string>
    <string name="warmly_remind_text1">1.工作日15:00前取现，当日处理，1-3个工作日到账；</string>
    <string name="warmly_remind_text2">2.工作日15:00后取现，第二个工作日处理后，1-3个工作日到账；</string>
    <string name="warmly_remind_text3">3.节假日取现,节假日后第一个工作日处理后,1-3个工作日到账；</string>
    <string name="warmly_remind_text4">4.取现当日不计收益。</string>
    <string name="warmly_play_text1">1.15:00前购买，当日15:00后开始计算收益；</string>
    <string name="warmly_play_text2">2.15:00后购买，第二日15:00后开始计算收益；</string>
    <string name="warmly_play_text3">3.取现当日不计收益。</string>
    <string name="bank">银行</string>
    <string name="input_cardnumber">请输入，仅支持储蓄卡</string>
    <string name="bind_bank_text">绑定银行卡需要短信确认\n验证码已发送至手机：%1$s，请按提示操作</string>
    <string name="confirm_info">验证信息</string>
    <string name="remittance_text1">我们已经向您%1$s的银行卡汇入一笔金额，请您确认具体的汇款金额</string>
    <string name="remittance_text2">提示：金额在0.00元~0.99元之间</string>
    <string name="confirm_btn">确&#160;&#160;&#160;&#160;认</string>
    <string name="partInvestAmount">起购金额(元)</string>
    <string name="set_ok">设置成功</string>
    <string name="load_again">点击屏幕，重新加载</string>
    <string name="check_function">验证方式</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_recording_intro_header">"创建手势密码"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重新绘制"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请重复手势密码"</string>
    <string name="lockpattern_pattern_confirmed_header">""</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重新绘制"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text1">您可以建立手势解锁：</string>
    <string name="gesture_password_guide_text2">请连接圆点  并记住路径</string>
    <string name="gesture_password_guide_creat_btn">创&#160;&#160;&#160;&#160;建</string>
    <string name="second_time_exit">再按一次退出赚啦</string>
    <string name="welcome_back">欢迎回来！</string>
    <string name="password_error_times">密码错误，还可以再输入%1$d次</string>
    <string name="cancel">取&#160;&#160;消</string>
     <string name="exit">退&#160;&#160;出</string>
    <string name="reset_login">重新登录</string>
    <string name="update">更&#160;&#160;新</string>
    <string name="okle">知道了</string>
    <string name="dial">拨&#160;&#160;打</string>
    <string name="change_account_text">确定用其他账号登录？</string>
    <string name="logout_text">确定退出登录？</string>
    <string name="forget_password_text">忘记手势密码，需要重新登录</string>
    <string name="count_shouyi_1">预期收益(元)</string>
    <string name="count_shouyi_2">理财期限(天)</string>
    <string name="count_shouyi_3">请输入理财金额</string>
    <string name="count_shouyi_4">元</string>
    <string name="count_shouyi_5">计算</string>
    <string name="test1">银行预留手机号</string>
    <string name="test2">请输入</string>
    <string name="test3">验证码</string>
    <string name="test4">获取验证码</string>
    <string name="test9">验证码已发送至银行预留手机</string>
    <string name="test12">2."银行预留手机号码"是在银行办理银行卡时登记的手机号码;</string>
    <string name="test13">3.如有疑问，请咨询客服400-800-5818(09:00--21:00)</string>
    <string name="test11">1.因第三方支付升级，为了您的账户安全，请重新验证银行卡；</string>
</resources>